# todo_app_api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env  .env.example  .gitignore  Cargo.toml
backend-tests/: .env-example  package-lock.json
backend/backend-tests/: .env-example  api.test.js
backend/src/: app_state.rs  lib.rs  main.rs  router.rs
backend/src/middleware/: require_authentication.rs
backend/src/queries/: mod.rs  task_queries.rs  user_queries.rs
backend/src/routes/: greeting.rs  mod.rs
backend/src/routes/tasks/: create_task.rs  create_task_extractor.rs  get_all_tasks.rs  get_one_task.rs  mod.rs
backend/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
backend/src/utilities/: app_error.rs  hash.rs  jwt.rs  token_wrapper.rs
frontend/: index.html
frontend/components/navbar/: header.html  navbar.js
frontend/pages/new_task/: new_task.html
frontend/pages/profile/: profile.html
frontend/pages/tasks/: tasks.html
src/: lib.rs  main.rs
src/database/: prelude.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/: greeting.rs
src/routes/tasks/: create_task_extractor.rs  delete_task.rs  update_task.rs
src/routes/users/: mod.rs
